# TeXtractor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile  prompts.md
src/ai-recognition/: ai_client.cpp  ai_client.h  gemini_client.cpp  gemini_client.h  ollama_client.cpp  ollama_client.h
src/core/: main.cpp  open_terminal.cpp  open_terminal.h  prompts.h  settings.cpp  settings.h
src/gui/: main_window.cpp  main_window.h
src/gui/main_pages/: home_page.cpp  home_page.h  result_page.cpp  result_page.h  settings_page.cpp  settings_page.h
src/ocr/: ocr.cpp  ocr.h  ollama_client.cpp  ollama_client.h
